Fix image overflow...

--- a/src/app/personal/home/home.component.scss
+++ b/src/app/personal/home/home.component.scss
@@ -6,9 +6,10 @@
         "photo carousel carousel"
         "photo history history"
         "outro outro outro";
-    grid-template-rows: 12em 12em 24em 24em;
-    grid-template-columns: 2fr 1fr 2fr;
-    grid-gap: 1.5em;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1.5fr 1fr 1fr;
+    grid-row-gap: 1.5em;
+    grid-column-gap: 3em;
 
     .caption {
         margin-top: 0.2em;
@@ -25,58 +26,68 @@
         min-height: 100%;
 
         mat-card {
-            min-height: 100%;
-        }
+            height: 100%;
+            width: 100%;
 
-        ngu-item {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding-bottom: 0.5em;
-
-            img {
-                max-width: 100%;
-                min-height: 100%;
-            }
-        }
-
-        .carousel-point {
-            padding: 0;
-            list-style-type: none;
-            text-align: center;
-            margin: 0;
-
-            li {
-                display: inline-block;
-                border-radius: 50%;
-                padding: 0.20em;
-                background: #6B6B6BCC;
-                margin: 0.5em;
-                transition-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
-                transition: 0.4s;
+            mat-card-title, h2 {
+                margin-bottom: 0;
             }
 
-            li.active {
-                background: #FBFBFBCC;
+            ngu-carousel {
+                height: 89%;
             }
-        }
 
-        .carousel-buttons {
-            width: 95%;
-            margin: auto;
-            position: absolute;
-            display: flex;
-            justify-content: space-between;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            mat-icon {
-                font-size: 36px;
-                height: 36px;
-                width: 36px;
-                line-height: 36px;
-                opacity: 0.5;
+            .item {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                padding-bottom: 0.5em;
+
+                img {
+                    max-width: 100%;
+                    max-height: 180%;
+                }
+            }
+
+            .carousel-point {
+                padding: 0;
+                list-style-type: none;
+                text-align: center;
+                margin: 0;
+
+                li {
+                    display: inline-block;
+                    border-radius: 50%;
+                    padding: 0.20em;
+                    background: #6B6B6BCC;
+                    margin: 0.5em;
+                    transition-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+                    transition: 0.4s;
+                }
+
+                li.active {
+                    background: #FBFBFBCC;
+                }
+            }
+
+            .carousel-buttons {
+                width: 95%;
+                margin: auto;
+                position: absolute;
+                display: flex;
+                justify-content: space-between;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+
+                mat-icon {
+                    font-size: 36px;
+                    height: 36px;
+                    width: 36px;
+                    line-height: 36px;
+                    opacity: 0.5;
+                }
             }
         }
     }
@@ -88,6 +99,3 @@
         }
     }
 }
-
-
-
