--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,7 @@ h1 {
     /* Support for IE. */
     font-feature-settings: 'liga';
 }
+
+.ngu-touch-container {
+    height: 100%;
+}
